crates/mirror-cli/src/tui/snapshots/rfm__tui__ui__tests__renders_a_sync_in_progress.snap
---
source: crates/mirror-cli/src/tui/ui.rs
expression: "draw(&busy_app(), at(12))"
---
"┌ rfm ─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│bucket my-bucket   root /Users/me/Mirror                                                          │"
"│● syncing (file change) 12s   last sync 12s ago   next poll in 48s                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ transfers (1) ───────────────────────────────────────────────────────────────────────────────────┐"
"│photos/2026/beach.jpg                         25% ───────────────────────        1.0 MiB / 4.0 MiB│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ activity ────────────────────────────────────────────────────────────────────────────────────────┐"
"│00:00:00 synced             1 upload, 1 download, 0 delete-remote, 0 delete-local, 0 conflict     │"
"│00:00:00 upload             notes/todo.md                                                         │"
"│00:00:00 warn               transfer failed; will retry next sync path=big.iso                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"last 1 upload, 1 download, 0 delete-remote, 0 delete-local, 0 conflict                              "
"session 1 up · 0 down · 0 B moved   q quit  s sync now  ↑↓ scroll  c clear                          "
