crates/mirror-cli/src/tui/snapshots/rfm__tui__ui__tests__renders_idle_and_disconnected.snap
---
source: crates/mirror-cli/src/tui/ui.rs
expression: "draw(&app, at(30))"
---
"┌ rfm ─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│bucket my-bucket   root /Users/me/Mirror                                                          │"
"│● disconnected   last sync 30s ago                                                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ transfers (0) ───────────────────────────────────────────────────────────────────────────────────┐"
"│no active transfers                                                                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ activity ────────────────────────────────────────────────────────────────────────────────────────┐"
"│00:00:00 synced             1 upload, 1 download, 0 delete-remote, 0 delete-local, 0 conflict     │"
"│00:00:00 upload             notes/todo.md                                                         │"
"│00:00:00 warn               transfer failed; will retry next sync path=big.iso                    │"
"│00:00:30 error              disconnected from the daemon                                          │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"last 1 upload, 1 download, 0 delete-remote, 0 delete-local, 0 conflict                              "
"session 1 up · 0 down · 0 B moved   q quit  ↑↓ scroll  c clear                                      "
